--- a/kcdu_practicals/Some Functions.ipynb
+++ b/kcdu_practicals/Some Functions.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Recursive Method to find the factorial of  number\n",
@@ -44,10 +46,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Non- Recursive Method to fiind the factorial of number\n",
+    "# Non- Recursive Method to find the factorial of number (By using third variable)\n",
     "\n",
     "def factorial_of_number_nr(number):\n",
     "    result = 1\n",
@@ -83,10 +87,12 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Non- Recursive Method to fiind the factorial of number\n",
+    "# Non- Recursive Method to find the factorial of number (Without using the third variable)\n",
     "\n",
     "def factorial_of_number_nr1(number):\n",
     "    result = 1\n",
@@ -119,37 +125,109 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "** WAF to check whether an input number is prime or not **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "def prime_check(number):   # It has the complexity of O(N)\n",
+    "    msg = \"\"\n",
+    "    if number == 0 or number == 1:\n",
+    "        msg = \"Etered number {} is a prime number\".format(number)\n",
+    "    else:\n",
+    "        test = False\n",
+    "        for i in range(2, number - 1):\n",
+    "            if number % i == 0:\n",
+    "                test = True\n",
+    "                break;\n",
+    "        if test == True:\n",
+    "            msg = \"Etered number {} is not a prime number\".format(number)\n",
+    "        else:\n",
+    "            msg = \"Etered number {} is a prime number\".format(number)\n",
+    "    return msg"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 12345678900001\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Enter a number: \"))\n",
+    "msg = prime_check(n)\n",
+    "print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "def prime_check1(number):    # It has the complexity of O(N/2)\n",
+    "    msg = \"\"\n",
+    "    if number == 0 or number == 1:\n",
+    "        msg = \"Etered number {} is a prime number\".format(number)\n",
+    "    elif number % 2 == 0:\n",
+    "        msg = \"Etered number {} is not a prime number\".format(number)\n",
+    "    else:\n",
+    "        test = False\n",
+    "        for i in range(3, number - 1, 2):\n",
+    "            if number % i == 0:\n",
+    "                test = True\n",
+    "                break;\n",
+    "        if test == True:\n",
+    "            msg = \"Etered number {} is not a prime number\".format(number)\n",
+    "        else:\n",
+    "            msg = \"Etered number {} is a prime number\".format(number)\n",
+    "    return msg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 545647657484351\n",
+      "Etered number 545647657484351 is not a prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Enter a number: \"))\n",
+    "msg = prime_check(n)\n",
+    "print(msg)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -170,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
