data cleaning codes

--- a/kcdu_practicals/Data_Types.ipynb
+++ b/kcdu_practicals/Data_Types.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "# String: strings are always remains in double / single quotes\n",
+    "# String: strings are always remains in double / single quotes, it is immutable\n",
     "raw_str = \"abc\"\n",
     "print(type(raw_str))\n",
     "print(len(raw_str))\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -69,18 +69,24 @@
       "hdjks\n",
       "23\n",
       "abc\n",
-      "hdjhjksdhjhdjks\n"
+      "hdjhjksdhjhdjks\n",
+      "5\n",
+      "abc\n",
+      "pqrew\n",
+      "hdjks\n",
+      "hdjhjksdhjhdjks\n",
+      "psssdsd\n"
      ]
     }
    ],
    "source": [
-    "# List: list always has square brackets\n",
+    "# List: list always has square brackets , it is mutable\n",
     "raw_list = []\n",
     "print(type(raw_list))\n",
     "print(len(raw_list))\n",
     "############################\n",
     "raw_list1 = [ 1, 2, 3]  # list of integres\n",
-    "raw_list2 = [\"abc\", \"pqrew\", \"hdjks\", \"23\"]\n",
+    "raw_list2 = [\"abc\", \"pqrew\", \"hdjks\", \"23\"]   # list of strings\n",
     "print(len(raw_list1))\n",
     "print(len(raw_list2))\n",
     "print(\"-------------------------------------\")\n",
@@ -97,7 +103,13 @@
     "\n",
     "raw_list2[3]  = \"hdjhjksdhjhdjks\"\n",
     "\n",
-    "print(raw_list2[3])\n"
+    "print(raw_list2[3])\n",
+    "\n",
+    "raw_list2.append(\"psssdsd\")\n",
+    "print(len(raw_list2))\n",
+    "\n",
+    "for l in raw_list2:\n",
+    "    print(l)"
    ]
   },
   {
@@ -109,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -119,12 +131,15 @@
       "<class 'tuple'>\n",
       "<class 'tuple'> 2\n",
       "<class 'tuple'> 2\n",
-      "<class 'tuple'>\n"
+      "<class 'tuple'>\n",
+      "2\n",
+      "3\n"
      ]
     }
    ],
    "source": [
     "# Tuples: Tuples requires atleast one comma, and remains enclosed by  paranthes (it optional)\n",
+    "# It is immutable\n",
     "raw_tuple = (2,3)\n",
     "raw_tuple1 = 2,4\n",
     "raw_tuple2 = ()\n",
@@ -133,12 +148,16 @@
     "print(type(raw_tuple1), len(raw_tuple1))\n",
     "raw_tpl = (3,)\n",
     "print(type(raw_tpl))\n",
-    "ra_lst = [\"ds\"]"
+    "ra_lst = [\"ds\"]\n",
+    "raw_str22 = \"A\"\n",
+    "\n",
+    "for t in raw_tuple:\n",
+    "    print(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -156,9 +175,9 @@
     }
    ],
    "source": [
-    "# Dictionary: Data remains in key and value pair format and remin enclosed by {} \n",
+    "# Dictionary: Data remains in key and value pair format and remin enclosed by {}; it is also mutable\n",
     "\n",
-    "raw_dict = {  }\n",
+    "raw_dict = {}\n",
     "print(type(raw_dict), len(raw_dict))\n",
     "\n",
     "raw_dict1 = {\n",
@@ -198,7 +217,7 @@
     }
    ],
    "source": [
-    "# Set:\n",
+    "# Set: Set are also immutable\n",
     "std1 = [\"A\", \"B\", \"C\", \"D\"]\n",
     "std2 = [\"A\", \"C\", \"P\", \"Q\"]\n",
     "print(type(std1), type(std2))\n",
@@ -208,6 +227,7 @@
     "print(std1, std1_set)\n",
     "\n",
     "comman_subject = std1_set.intersection(std2_set)\n",
+    "#comm = std2_set.intersection(std1_set)\n",
     "print(\"Comman subject: {}\".format(comman_subject))\n",
     "\n",
     "different_from_std2 = std1_set.difference(std2_set)\n",
