dictionary data type:: basics

--- a/kcdu_practicals/Data_Types.ipynb
+++ b/kcdu_practicals/Data_Types.ipynb
@@ -1093,6 +1093,253 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Add an element into the dictionary **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student[\"address\"] = \"ramanujan college, Kalka Ji\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'address': 'ramanujan college, Kalka Ji',\n",
+       " 'course': 'bvoc',\n",
+       " 'email_id': 'saket_au@rediffmail.com',\n",
+       " 'marks': [23, 45, 66, 90, 0],\n",
+       " 'name': 'saket',\n",
+       " 'roll no': 123}"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student = {\n",
+    "    \"mobile\": \"23233\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mobile': '23233'}"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student1 = {\n",
+    "    \"name\": \"saket\",\n",
+    "    \"course\": \"bvoc\",\n",
+    "    \"roll no\" : 123,\n",
+    "    \"email_id\" : \"saket_au@rediffmail.com\",\n",
+    "    \"marks\":  [23, 45, 66, 90, 0]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "course\n",
+      "roll no\n",
+      "email_id\n",
+      "marks\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in student1:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23, 45, 66, 90, 0]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student1[\"name\"]\n",
+    "student1[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key: name , Data values saket data type: <class 'str'>\n",
+      "key: course , Data values bvoc data type: <class 'str'>\n",
+      "key: roll no , Data values 123 data type: <class 'int'>\n",
+      "key: email_id , Data values saket_au@rediffmail.com data type: <class 'str'>\n",
+      "key: marks , Data values [23, 45, 66, 90, 0] data type: <class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in student1:\n",
+    "    print(\"key:\", i, \", Data values\", \\\n",
+    "          student1[i], \"data type:\", type(student1[i]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** change the value of a key in dictionary **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if type(student1[\"roll no\"]) == int:\n",
+    "    student1[\"roll no\"] = str(student1[\"roll no\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'> 123\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(student1[\"roll no\"]), student1[\"roll no\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 45, 66, 90, 0]\n",
+      "Student  saket got  44.8 % marks.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute the percentage of marks\n",
+    "print(student1[\"marks\"])  \n",
+    "marks_obtained = sum(student1[\"marks\"])      # sum of marks\n",
+    "no_subjects = len(student1[\"marks\"])\n",
+    "percentage = marks_obtained / no_subjects\n",
+    "print(\"Student \", student1[\"name\"],\\\n",
+    "      \"got \", percentage, \"% marks.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student saket got 44.8 marks.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Student {} got {} marks.\".\\\n",
+    "      format(student1[\"name\"], percentage))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student saket got 44.8 marks.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Student {0} got {1} marks.\".\\\n",
+    "      format(student1[\"name\"], percentage))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
